...
    <View style={mainAddressStyles.screen}>
      <TouchableOpacity
        style={mainAddressStyles.createBtn}
        onPress={() => navigation.navigate('CreateAddress')}
        activeOpacity={0.9}
      >
        <Text style={mainAddressStyles.createBtnText}>+ Créer une adresse</Text>
      </TouchableOpacity>

      <FlatList
        data={addresses}
        keyExtractor={(item) => item._id}
        renderItem={renderItem}
...
